--- a/WoodlandsSupplyCoWebApp/WoodlandsSupplyCoWebApp.csproj
+++ b/WoodlandsSupplyCoWebApp/WoodlandsSupplyCoWebApp.csproj
@@ -136,7 +136,7 @@
     <Content Include="Assets\Camping Icon.svg" />
     <Content Include="Assets\colors.txt" />
     <Content Include="Assets\luke-stackpoole-659482-unsplash.jpg" />
-    <Content Include="Assets\Products\Backpacking Accessories\Aventure Medical Kits Mountain Series Hiker Med Kit.jpg" />
+    <Content Include="Assets\Products\Backpacking Accessories\Aventure Medical Hiker Med Kit.jpg" />
     <Content Include="Assets\Products\Backpacking Accessories\Black Biamond Trail Ergo Cork Trekking Poles.jpg" />
     <Content Include="Assets\Products\Backpacking Accessories\Petzl Tikkina Headlamp.jpg" />
     <Content Include="Assets\Products\Backpacking Accessories\Playtypus Big Zip LP Reservoir.jpg" />
@@ -221,6 +221,7 @@
     <Content Include="Assets\Outdoor-adventure-wilderness-camping-insignia.eps" />
     <Content Include="Assets\Woodlands-Logo-Main.ai" />
     <Content Include="Assets\Camping Icon.eps" />
+    <None Include="Properties\PublishProfiles\WoodlandsSupplyCoWebApp - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\anime.js" />
     <Content Include="Scripts\bootstrap.js" />
