stupid stupid azure

--- a/WoodlandsSupplyCoWebApp/WoodlandsSupplyCoWebApp.csproj
+++ b/WoodlandsSupplyCoWebApp/WoodlandsSupplyCoWebApp.csproj
@@ -194,28 +194,28 @@
     <Content Include="Default.aspx" />
     <Content Include="Assets\dorel-gnatiuc-57235-unsplash.jpg" />
     <Content Include="favicon.ico" />
-    <Content Include="Fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Content\Fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="Fonts\glyphicons-halflings-regular.woff2" />
-    <Content Include="Fonts\glyphicons-halflings-regular.woff" />
-    <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
-    <Content Include="Fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Content\Fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Content\Fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Content\Fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Content\Fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="ApplicationInsights.config" />
     <Content Include="Content\bulma.css.map" />
-    <Content Include="Fonts\Arber-Vintage-Free.otf" />
-    <Content Include="Fonts\Arber-Vintage-Free.woff" />
-    <Content Include="Fonts\Museo300-Regular.otf" />
-    <Content Include="Fonts\Museo700-Regular.otf" />
-    <Content Include="Fonts\OpenSans-Italic.ttf" />
-    <Content Include="Fonts\OpenSans-Light.ttf" />
-    <Content Include="Fonts\OpenSans-LightItalic.ttf" />
-    <Content Include="Fonts\OpenSans-Regular.ttf" />
-    <Content Include="Fonts\OpenSans-Semibold.ttf" />
-    <Content Include="Fonts\OpenSans-SemiboldItalic.ttf" />
+    <Content Include="Content\Fonts\Arber-Vintage-Free.otf" />
+    <Content Include="Content\Fonts\Arber-Vintage-Free.woff" />
+    <Content Include="Content\Fonts\Museo300-Regular.otf" />
+    <Content Include="Content\Fonts\Museo700-Regular.otf" />
+    <Content Include="Content\Fonts\OpenSans-Italic.ttf" />
+    <Content Include="Content\Fonts\OpenSans-Light.ttf" />
+    <Content Include="Content\Fonts\OpenSans-LightItalic.ttf" />
+    <Content Include="Content\Fonts\OpenSans-Regular.ttf" />
+    <Content Include="Content\Fonts\OpenSans-Semibold.ttf" />
+    <Content Include="Content\Fonts\OpenSans-SemiboldItalic.ttf" />
     <Content Include="Assets\Mountaineer Line Icons.ai" />
     <Content Include="Assets\Forest-Mountain-Adventure-Logo-Insignia.eps" />
     <Content Include="Assets\Outdoor-adventure-wilderness-camping-insignia.eps" />
