Added weight to front-end. Also, added the remove from cart buttons

--- a/WoodlandsSupplyCoWebApp/Web.config
+++ b/WoodlandsSupplyCoWebApp/Web.config
@@ -43,5 +43,13 @@
         type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation"
         preCondition="integratedMode,managedHandler"/>
     </modules>
+    <staticContent>
+      <remove fileExtension=".woff" />
+      <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <remove fileExtension=".otf" />
+      <mimeMap fileExtension=".otf" mimeType="application/x-font-otf" />
+      <remove fileExtension=".ttf" />
+      <mimeMap fileExtension=".ttf" mimeType="application/x-font-ttf" />
+    </staticContent>
   </system.webServer>
 </configuration>
