--- a/WoodlandsSupplyCoWebApp/packages.config
+++ b/WoodlandsSupplyCoWebApp/packages.config
@@ -19,6 +19,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net47" />
+  <package id="Sendgrid" version="9.9.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net47" />
   <package id="WebGrease" version="1.6.0" targetFramework="net47" />
 </packages>
